--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+  <!-- Manifest -->
+  <link rel="manifest" href="/manifest.json" />
 </head>
 
 <body>
